crates/ppcjit/src/snapshots/ppcjit__test__x86_64_v1_gu_vec_scale_disasm.snap
---
source: crates/ppcjit/src/test.rs
expression: disasm
---
  pushq %rbp
  unwind PushFrameRegs { offset_upward_to_caller_sp: 16 }
  movq %rsp, %rbp
  unwind DefineNewFrame { offset_upward_to_caller_sp: 16, offset_downward_to_clobbers: 48 }
  subq $0xb0, %rsp
  movq %rbx, 0x80(%rsp)
  unwind SaveReg { clobber_offset: 0, reg: p3i }
  movq %r12, 0x88(%rsp)
  unwind SaveReg { clobber_offset: 8, reg: p12i }
  movq %r13, 0x90(%rsp)
  unwind SaveReg { clobber_offset: 16, reg: p13i }
  movq %r14, 0x98(%rsp)
  unwind SaveReg { clobber_offset: 24, reg: p14i }
  movq %r15, 0xa0(%rsp)
  unwind SaveReg { clobber_offset: 32, reg: p15i }
block0:
  movq %rdx, %r15
  movq %rdi, <offset:1>+8(%rsp)
  movq %rsi, <offset:1>+0x10(%rsp)
  movl 0x2a8(%rsi), %esi
  shrl $0xd, %esi
  testb $0x1, %sil
  jnz     label4; j label1
block3:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block4:
  movq <offset:1>+0x10(%rsp), %rsi
  movl 0x14(%rsi), %r13d
  movl 0x368(%rsi), %edx
  movq %rdx, %r12
  leaq <offset:1>+(%rsp), %rcx
  movq %rcx, %r14
  load_ext_name userextname10+0, %rax
  movq %r13, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label8; j label5
block7:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block8:
  movsd <offset:1>+(%rsp), %xmm0
  movdqu %xmm0, <offset:1>+0x48(%rsp)
  movzbl %al, %eax
  leal (%r13, %rax), %ebx
  load_ext_name userextname10+0, %rax
  movq %r12, %rdx
  movq %r14, %rcx
  movq %rbx, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label12; j label9
block11:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block12:
  movsd <offset:1>+(%rsp), %xmm0
  movq <offset:1>+0x10(%rsp), %rsi
  movdqu %xmm0, <offset:1>+0x28(%rsp)
  movl (%rsi), %r12d
  movl 0x368(%rsi), %edx
  leal 8(%r13), %esi
  load_ext_name userextname10+0, %rax
  movq %r14, %rcx
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testb %al, %al
  jnz     label16; j label13
block15:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block16:
  movdqu <offset:1>+0x28(%rsp), %xmm1
  movdqu <offset:1>+0x48(%rsp), %xmm7
  movsd <offset:1>+(%rsp), %xmm0
  movq <offset:1>+0x10(%rsp), %rsi
  movdqu %xmm0, <offset:1>+0x18(%rsp)
  movupd 0x98(%rsi), %xmm2
  movl 0x28c(%rsi), %ebx
  movl 0x18(%rsi), %r13d
  movl 0x368(%rsi), %edx
  movq %rdx, <offset:1>+0x38(%rsp)
  uninit  %xmm3
  movdqa %xmm3, %xmm0
  movdqu %xmm3, <offset:1>+0x68(%rsp)
  xorpd %xmm0, %xmm3
  movdqu %xmm3, <offset:1>+0x68(%rsp)
  movsd %xmm7, %xmm3
  movdqu %xmm3, <offset:1>+0x68(%rsp)
  movlhps %xmm1, %xmm3
  movdqu %xmm3, <offset:1>+0x68(%rsp)
  movdqu (%rip), %xmm1
  paddusb (%rip), %xmm1
  load_ext_name %X86Pshufb+0, %rax
  movdqa %xmm2, %xmm0
  call    *%rax
  movdqu <offset:1>+0x68(%rsp), %xmm3
  movdqa %xmm3, %xmm1
  mulpd %xmm0, %xmm1
  movdqu %xmm1, <offset:1>+0x48(%rsp)
  movdqu %xmm0, <offset:1>+0x58(%rsp)
  load_ext_name userextname11+0, %rax
  movq <offset:1>+0x38(%rsp), %rdx
  movq %r13, %rsi
  movq <offset:1>+8(%rsp), %rdi
  movdqu <offset:1>+0x48(%rsp), %xmm0
  call    *%rax
  testb %al, %al
  jnz     label20; j label17
block19:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block20:
  movzbl %al, %eax
  leal (%r13, %rax), %r14d
  movdqu <offset:1>+0x48(%rsp), %xmm0
  pshufd $0xee, %xmm0, %xmm0
  load_ext_name userextname11+0, %rcx
  movq <offset:1>+0x38(%rsp), %rdx
  movq %r14, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rcx
  testb %al, %al
  jnz     label24; j label21
block23:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block24:
  movq <offset:1>+0x10(%rsp), %rsi
  movdqu <offset:1>+0x18(%rsp), %xmm2
  movl 0x368(%rsi), %edx
  movq %rdx, <offset:1>+0x38(%rsp)
  leal 8(%r13), %r14d
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movsd %xmm2, %xmm0
  movabsq $0x3ff0000000000000, %rsi
  movq %rsi, %xmm6
  movlhps %xmm6, %xmm0
  movdqu <offset:1>+0x58(%rsp), %xmm1
  movdqa %xmm0, %xmm5
  mulpd %xmm1, %xmm5
  movdqu %xmm5, <offset:1>+0x18(%rsp)
  movdqu %xmm0, <offset:1>+0x28(%rsp)
  load_ext_name userextname11+0, %r8
  movq %r14, %rsi
  movq <offset:1>+8(%rsp), %rdi
  movdqu <offset:1>+0x18(%rsp), %xmm0
  call    *%r8
  testb %al, %al
  jnz     label28; j label25
block27:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block28:
  movdqu <offset:1>+0x18(%rsp), %xmm5
  movzbl %al, %eax
  leal 8(%r13, %rax), %r13d
  pshufd $0xee, %xmm5, %xmm0
  load_ext_name userextname11+0, %rcx
  movq <offset:1>+0x38(%rsp), %rdx
  movq %r13, %rsi
  movq <offset:1>+8(%rsp), %rdi
  call    *%rcx
  testb %al, %al
  jnz     label32; j label29
block31:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block32:
  movdqu <offset:1>+0x28(%rsp), %xmm0
  movdqu <offset:1>+0x18(%rsp), %xmm5
  leal 0x18(%r12), %eax
  movq <offset:1>+0x10(%rsp), %rsi
  movl %eax, (%rsi)
  movdqu <offset:1>+0x68(%rsp), %xmm1
  movupd %xmm1, 0xa8(%rsi)
  andl $0xfffe0fff, %ebx
  uninit  %xmm1
  xorpd %xmm1, %xmm1
  movdqu <offset:1>+0x48(%rsp), %xmm2
  ucomisd %xmm2, %xmm1
  seta %al
  movzbl %al, %eax
  shll $0xf, %eax
  ucomisd (%rip), %xmm2
  seta %cl
  movzbl %cl, %ecx
  shll $0xe, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm2
  setnp %cl
  sete %dl
  andl %edx, %ecx
  movzbl %cl, %ecx
  shll $0xd, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm2
  setp %cl
  movzbl %cl, %ecx
  shll $0xc, %ecx
  orl %ecx, %eax
  orl %eax, %ebx
  andl $0xfffe0fff, %ebx
  ucomisd %xmm5, %xmm1
  seta %al
  movzbl %al, %eax
  shll $0xf, %eax
  ucomisd (%rip), %xmm5
  seta %cl
  movzbl %cl, %ecx
  shll $0xe, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm5
  setnp %cl
  sete %dl
  andl %edx, %ecx
  movzbl %cl, %ecx
  shll $0xd, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm5
  setp %cl
  movzbl %cl, %ecx
  shll $0xc, %ecx
  orl %ecx, %eax
  orl %eax, %ebx
  movl %ebx, 0x28c(%rsi)
  movupd %xmm5, 0xc8(%rsi)
  movupd %xmm0, 0xb8(%rsi)
  load_ext_name userextname34+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0xc0006, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label34; j label33
block34:
  movq %r15, %rdx
  movq <offset:1>+0x10(%rsp), %rsi
  movq <offset:1>+8(%rsp), %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block1:
  movl $0x800, %esi
  load_ext_name userextname0+0, %r9
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%r9
  load_ext_name userextname26+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x20001, %ecx
  load_ext_name userextname1+0, %r10
  movq <offset:1>+8(%rsp), %rdi
  call    *%r10
  testq %rax, %rax
  movq %rax, %r10
  jnz     label3; j label2
block2:
  movq 0x80(%rsp), %rbx
  movq 0x88(%rsp), %r12
  movq 0x90(%rsp), %r13
  movq 0x98(%rsp), %r14
  movq 0xa0(%rsp), %r15
  addq $0xb0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block5:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r13d, 0x360(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname27+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x20001, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label7; j label6
block6:
  movq 0x80(%rsp), %rbx
  movq 0x88(%rsp), %r12
  movq 0x90(%rsp), %r13
  movq 0x98(%rsp), %r14
  movq 0xa0(%rsp), %r15
  addq $0xb0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block9:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %ebx, 0x360(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname28+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x20001, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label11; j label10
block10:
  movq 0x80(%rsp), %rbx
  movq 0x88(%rsp), %r12
  movq 0x90(%rsp), %r13
  movq 0x98(%rsp), %r14
  movq 0xa0(%rsp), %r15
  addq $0xb0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block13:
  leal 8(%r13), %eax
  movq <offset:1>+0x10(%rsp), %rsi
  movl %eax, 0x360(%rsi)
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movdqu <offset:1>+0x48(%rsp), %xmm7
  movsd %xmm7, %xmm0
  movdqu <offset:1>+0x28(%rsp), %xmm1
  movlhps %xmm1, %xmm0
  movupd %xmm0, 0xa8(%rsi)
  leal 4(%r12), %eax
  movl %eax, (%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname29+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x40002, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label15; j label14
block14:
  movq 0x80(%rsp), %rbx
  movq 0x88(%rsp), %r12
  movq 0x90(%rsp), %r13
  movq 0x98(%rsp), %r14
  movq 0xa0(%rsp), %r15
  addq $0xb0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block17:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r13d, 0x360(%rsi)
  leal 0xc(%r12), %eax
  movl %eax, (%rsi)
  movdqu <offset:1>+0x68(%rsp), %xmm0
  movupd %xmm0, 0xa8(%rsi)
  andl $0xfffe0fff, %ebx
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movdqu <offset:1>+0x48(%rsp), %xmm1
  ucomisd %xmm1, %xmm0
  seta %al
  movzbl %al, %eax
  shll $0xf, %eax
  movdqu <offset:1>+0x48(%rsp), %xmm0
  ucomisd (%rip), %xmm0
  seta %cl
  movzbl %cl, %ecx
  shll $0xe, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm0
  setnp %cl
  sete %dl
  andl %edx, %ecx
  movzbl %cl, %ecx
  shll $0xd, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm0
  setp %cl
  movzbl %cl, %ecx
  shll $0xc, %ecx
  orl %ecx, %eax
  orl %eax, %ebx
  movl %ebx, 0x28c(%rsi)
  movupd %xmm0, 0xc8(%rsi)
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movdqu <offset:1>+0x18(%rsp), %xmm3
  movsd %xmm3, %xmm0
  movabsq $0x3ff0000000000000, %rax
  movq %rax, %xmm1
  movlhps %xmm1, %xmm0
  movupd %xmm0, 0xb8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname30+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x80004, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label19; j label18
block18:
  movq 0x80(%rsp), %rbx
  movq 0x88(%rsp), %r12
  movq 0x90(%rsp), %r13
  movq 0x98(%rsp), %r14
  movq 0xa0(%rsp), %r15
  addq $0xb0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block21:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r14d, 0x360(%rsi)
  leal 0xc(%r12), %eax
  movl %eax, (%rsi)
  movdqu <offset:1>+0x68(%rsp), %xmm0
  movupd %xmm0, 0xa8(%rsi)
  andl $0xfffe0fff, %ebx
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movdqu <offset:1>+0x48(%rsp), %xmm1
  ucomisd %xmm1, %xmm0
  seta %al
  movzbl %al, %eax
  shll $0xf, %eax
  movdqu <offset:1>+0x48(%rsp), %xmm0
  ucomisd (%rip), %xmm0
  seta %cl
  movzbl %cl, %ecx
  shll $0xe, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm0
  setnp %cl
  sete %dl
  andl %edx, %ecx
  movzbl %cl, %ecx
  shll $0xd, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm0
  setp %cl
  movzbl %cl, %ecx
  shll $0xc, %ecx
  orl %ecx, %eax
  orl %eax, %ebx
  movl %ebx, 0x28c(%rsi)
  movupd %xmm0, 0xc8(%rsi)
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movdqu <offset:1>+0x18(%rsp), %xmm2
  movsd %xmm2, %xmm0
  movabsq $0x3ff0000000000000, %rax
  movq %rax, %xmm1
  movlhps %xmm1, %xmm0
  movupd %xmm0, 0xb8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rcx
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rcx
  load_ext_name userextname31+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x80004, %ecx
  load_ext_name userextname1+0, %r8
  movq <offset:1>+8(%rsp), %rdi
  call    *%r8
  testq %rax, %rax
  movq %rax, %r10
  jnz     label23; j label22
block22:
  movq 0x80(%rsp), %rbx
  movq 0x88(%rsp), %r12
  movq 0x90(%rsp), %r13
  movq 0x98(%rsp), %r14
  movq 0xa0(%rsp), %r15
  addq $0xb0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block25:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r14d, 0x360(%rsi)
  leal 0x14(%r12), %r8d
  movl %r8d, (%rsi)
  movdqu <offset:1>+0x68(%rsp), %xmm0
  movupd %xmm0, 0xa8(%rsi)
  andl $0xfffe0fff, %ebx
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movdqu <offset:1>+0x48(%rsp), %xmm1
  ucomisd %xmm1, %xmm0
  seta %r11b
  movzbl %r11b, %eax
  shll $0xf, %eax
  ucomisd (%rip), %xmm1
  seta %cl
  movzbl %cl, %r11d
  shll $0xe, %r11d
  orl %r11d, %eax
  ucomisd (%rip), %xmm1
  setnp %cl
  sete %dl
  andl %edx, %ecx
  movzbl %cl, %ecx
  shll $0xd, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm1
  setp %cl
  movzbl %cl, %ecx
  shll $0xc, %ecx
  orl %ecx, %eax
  orl %eax, %ebx
  andl $0xfffe0fff, %ebx
  movdqu <offset:1>+0x18(%rsp), %xmm5
  ucomisd %xmm5, %xmm0
  seta %al
  movzbl %al, %eax
  shll $0xf, %eax
  ucomisd (%rip), %xmm5
  seta %cl
  movzbl %cl, %ecx
  shll $0xe, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm5
  setnp %cl
  sete %dl
  andl %edx, %ecx
  movzbl %cl, %ecx
  shll $0xd, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm5
  setp %cl
  movzbl %cl, %ecx
  shll $0xc, %ecx
  orl %ecx, %eax
  orl %eax, %ebx
  movl %ebx, 0x28c(%rsi)
  movupd %xmm5, 0xc8(%rsi)
  movdqu <offset:1>+0x28(%rsp), %xmm0
  movupd %xmm0, 0xb8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname32+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0xc0006, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label27; j label26
block26:
  movq 0x80(%rsp), %rbx
  movq 0x88(%rsp), %r12
  movq 0x90(%rsp), %r13
  movq 0x98(%rsp), %r14
  movq 0xa0(%rsp), %r15
  addq $0xb0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block29:
  movq <offset:1>+0x10(%rsp), %rsi
  movl %r13d, 0x360(%rsi)
  leal 0x14(%r12), %eax
  movl %eax, (%rsi)
  movdqu <offset:1>+0x68(%rsp), %xmm0
  movupd %xmm0, 0xa8(%rsi)
  andl $0xfffe0fff, %ebx
  uninit  %xmm0
  xorpd %xmm0, %xmm0
  movdqu <offset:1>+0x48(%rsp), %xmm1
  ucomisd %xmm1, %xmm0
  seta %al
  movzbl %al, %eax
  shll $0xf, %eax
  ucomisd (%rip), %xmm1
  seta %cl
  movzbl %cl, %ecx
  shll $0xe, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm1
  setnp %cl
  sete %dl
  andl %edx, %ecx
  movzbl %cl, %ecx
  shll $0xd, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm1
  setp %cl
  movzbl %cl, %ecx
  shll $0xc, %ecx
  orl %ecx, %eax
  orl %eax, %ebx
  andl $0xfffe0fff, %ebx
  movdqu <offset:1>+0x18(%rsp), %xmm5
  ucomisd %xmm5, %xmm0
  seta %al
  movzbl %al, %eax
  shll $0xf, %eax
  ucomisd (%rip), %xmm5
  seta %cl
  movzbl %cl, %ecx
  shll $0xe, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm5
  setnp %cl
  sete %dl
  andl %edx, %ecx
  movzbl %cl, %ecx
  shll $0xd, %ecx
  orl %ecx, %eax
  ucomisd (%rip), %xmm5
  setp %cl
  movzbl %cl, %ecx
  shll $0xc, %ecx
  orl %ecx, %eax
  orl %eax, %ebx
  movl %ebx, 0x28c(%rsi)
  movupd %xmm5, 0xc8(%rsi)
  movdqu <offset:1>+0x28(%rsp), %xmm0
  movupd %xmm0, 0xb8(%rsi)
  movl $0x300, %esi
  load_ext_name userextname0+0, %rax
  movq <offset:1>+0x10(%rsp), %rdi
  call    *%rax
  load_ext_name userextname33+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0xc0006, %ecx
  load_ext_name userextname1+0, %rax
  movq <offset:1>+8(%rsp), %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label31; j label30
block30:
  movq 0x80(%rsp), %rbx
  movq 0x88(%rsp), %r12
  movq 0x90(%rsp), %r13
  movq 0x98(%rsp), %r14
  movq 0xa0(%rsp), %r15
  addq $0xb0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block33:
  movq 0x80(%rsp), %rbx
  movq 0x88(%rsp), %r12
  movq 0x90(%rsp), %r13
  movq 0x98(%rsp), %r14
  movq 0xa0(%rsp), %r15
  addq $0xb0, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
