crates/ppcjit/src/snapshots/ppcjit__test__x86_64_v1_ps_add_acc_clir.snap
---
source: crates/ppcjit/src/test.rs
expression: clir
---
function u0:0(i64, i64, i64) tail {
    ss0 = explicit_slot 8, align = 8
    gv0 = symbol userextname26
    gv1 = symbol userextname27
    sig0 = (i64, i64, i64) tail
    sig1 = (i64, i64, i64, i32) -> i64 system_v
    sig2 = (i64, i32, i64) -> i8 system_v
    sig3 = (i64, i32, i64) -> i8 system_v
    sig4 = (i64, i32, i64) -> i8 system_v
    sig5 = (i64, i32, i64) -> i8 system_v
    sig6 = (i64, i32, i8) -> i8 system_v
    sig7 = (i64, i32, i16) -> i8 system_v
    sig8 = (i64, i32, i32) -> i8 system_v
    sig9 = (i64, i32, i64) -> i8 system_v
    sig10 = (i64, i32, i32, i64) -> i8 system_v
    sig11 = (i64, i32, i32, f64) -> i8 system_v
    sig12 = (i64, i32) system_v
    sig13 = (i64) system_v
    sig14 = (i64, i16) system_v
    fn0 = u1:0 sig14
    fn1 = u0:2 sig1
    fn2 = u0:3 sig2
    fn3 = u0:4 sig3
    fn4 = u0:5 sig4
    fn5 = u0:6 sig5
    fn6 = u0:7 sig6
    fn7 = u0:8 sig7
    fn8 = u0:9 sig8
    fn9 = u0:10 sig9
    fn10 = u0:11 sig10
    fn11 = u0:12 sig11
    fn12 = u0:13 sig12
    fn13 = u0:14 sig13
    fn14 = u0:15 sig13
    fn15 = u0:16 sig13
    fn16 = u0:17 sig13
    fn17 = u0:18 sig13
    fn18 = u0:19 sig13
    fn19 = u0:20 sig13
    fn20 = u0:21 sig13
    fn21 = u0:22 sig13
    fn22 = u0:23 sig13
    fn23 = u0:24 sig13
    fn24 = u0:25 sig12
    fn25 = u0:26 sig13

                                block0(v0: i64, v1: i64, v2: i64):
@0000                               v3 = load.i32 notrap aligned v1+680
@0000                               v4 = iconst.i32 13
@0000                               v5 = ushr v3, v4  ; v4 = 13
@0000                               v6 = band_imm v5, 1
@0000                               v7 = ireduce.i8 v6
@0000                               brif v7, block2, block1

                                block1 cold:
@0000                               v8 = iconst.i16 2048
@0000                               call fn0(v1, v8)  ; v8 = 2048
@0000                               v9 = global_value.i64 gv0
@0000                               v10 = iconst.i64 0
@0000                               v11 = iconst.i32 0x0002_0001
@0000                               v12 = call fn1(v0, v9, v10, v11)  ; v10 = 0, v11 = 0x0002_0001
@0000                               v13 = icmp_imm ne v12, 0
@0000                               brif v13, block3, block4

                                block3:
@0001                               return_call_indirect.i64 sig0, v12(v0, v1, v2)

                                block4 cold:
@0001                               return

                                block2:
@0000                               v14 = load.f64x2 notrap aligned v1+136
@0000                               v15 = load.f64x2 notrap aligned v1+152
@0000                               v16 = fadd v14, v15
@0000                               v17 = extractlane v16, 0
@0000                               v18 = f64const 0.0
@0000                               v19 = fcmp lt v17, v18  ; v18 = 0.0
@0000                               v20 = fcmp gt v17, v18  ; v18 = 0.0
@0000                               v21 = fcmp eq v17, v18  ; v18 = 0.0
@0000                               v22 = fcmp uno v17, v18  ; v18 = 0.0
@0000                               v23 = load.i32 notrap aligned v1+652
@0000                               v24 = uextend.i32 v19
@0000                               v25 = uextend.i32 v20
@0000                               v26 = uextend.i32 v21
@0000                               v27 = uextend.i32 v22
@0000                               v28 = ishl_imm v24, 15
@0000                               v29 = ishl_imm v25, 14
@0000                               v30 = ishl_imm v26, 13
@0000                               v31 = ishl_imm v27, 12
@0000                               v32 = bor v28, v29
@0000                               v33 = bor v32, v30
@0000                               v34 = bor v33, v31
@0000                               v35 = iconst.i32 0x0001_f000
@0000                               v36 = band_not v23, v35  ; v35 = 0x0001_f000
@0000                               v37 = bor v36, v34
@0000                               v38 = load.i32 notrap aligned v1
@0000                               v39 = iadd_imm v38, 4
@0001                               v40 = load.f64x2 notrap aligned v1+168
@0001                               v41 = fadd v16, v40
@0001                               v42 = extractlane v41, 0
@0001                               v43 = f64const 0.0
@0001                               v44 = fcmp lt v42, v43  ; v43 = 0.0
@0001                               v45 = fcmp gt v42, v43  ; v43 = 0.0
@0001                               v46 = fcmp eq v42, v43  ; v43 = 0.0
@0001                               v47 = fcmp uno v42, v43  ; v43 = 0.0
@0001                               v48 = uextend.i32 v44
@0001                               v49 = uextend.i32 v45
@0001                               v50 = uextend.i32 v46
@0001                               v51 = uextend.i32 v47
@0001                               v52 = ishl_imm v48, 15
@0001                               v53 = ishl_imm v49, 14
@0001                               v54 = ishl_imm v50, 13
@0001                               v55 = ishl_imm v51, 12
@0001                               v56 = bor v52, v53
@0001                               v57 = bor v56, v54
@0001                               v58 = bor v57, v55
@0001                               v59 = iconst.i32 0x0001_f000
@0001                               v60 = band_not v37, v59  ; v59 = 0x0001_f000
@0001                               v61 = bor v60, v58
@0001                               v62 = iadd_imm v39, 4
@0002                               v63 = load.f64x2 notrap aligned v1+184
@0002                               v64 = fadd v41, v63
@0002                               v65 = extractlane v64, 0
@0002                               v66 = f64const 0.0
@0002                               v67 = fcmp lt v65, v66  ; v66 = 0.0
@0002                               v68 = fcmp gt v65, v66  ; v66 = 0.0
@0002                               v69 = fcmp eq v65, v66  ; v66 = 0.0
@0002                               v70 = fcmp uno v65, v66  ; v66 = 0.0
@0002                               v71 = uextend.i32 v67
@0002                               v72 = uextend.i32 v68
@0002                               v73 = uextend.i32 v69
@0002                               v74 = uextend.i32 v70
@0002                               v75 = ishl_imm v71, 15
@0002                               v76 = ishl_imm v72, 14
@0002                               v77 = ishl_imm v73, 13
@0002                               v78 = ishl_imm v74, 12
@0002                               v79 = bor v75, v76
@0002                               v80 = bor v79, v77
@0002                               v81 = bor v80, v78
@0002                               v82 = iconst.i32 0x0001_f000
@0002                               v83 = band_not v61, v82  ; v82 = 0x0001_f000
@0002                               v84 = bor v83, v81
@0002                               v85 = iadd_imm v62, 4
@0003                               v86 = load.f64x2 notrap aligned v1+200
@0003                               v87 = fadd v64, v86
@0003                               v88 = extractlane v87, 0
@0003                               v89 = f64const 0.0
@0003                               v90 = fcmp lt v88, v89  ; v89 = 0.0
@0003                               v91 = fcmp gt v88, v89  ; v89 = 0.0
@0003                               v92 = fcmp eq v88, v89  ; v89 = 0.0
@0003                               v93 = fcmp uno v88, v89  ; v89 = 0.0
@0003                               v94 = uextend.i32 v90
@0003                               v95 = uextend.i32 v91
@0003                               v96 = uextend.i32 v92
@0003                               v97 = uextend.i32 v93
@0003                               v98 = ishl_imm v94, 15
@0003                               v99 = ishl_imm v95, 14
@0003                               v100 = ishl_imm v96, 13
@0003                               v101 = ishl_imm v97, 12
@0003                               v102 = bor v98, v99
@0003                               v103 = bor v102, v100
@0003                               v104 = bor v103, v101
@0003                               v105 = iconst.i32 0x0001_f000
@0003                               v106 = band_not v84, v105  ; v105 = 0x0001_f000
@0003                               v107 = bor v106, v104
@0003                               v108 = iadd_imm v85, 4
                                    store notrap aligned v108, v1
                                    store notrap aligned v87, v1+136
                                    store notrap aligned v107, v1+652
                                    v109 = global_value.i64 gv1
                                    v110 = iconst.i64 0
                                    v111 = iconst.i32 0x0008_0004
                                    v112 = call fn1(v0, v109, v110, v111)  ; v110 = 0, v111 = 0x0008_0004
                                    v113 = icmp_imm ne v112, 0
                                    brif v113, block5, block6

                                block5:
@0004                               return_call_indirect.i64 sig0, v112(v0, v1, v2)

                                block6 cold:
@0004                               return
}
