crates/ppcjit/src/snapshots/ppcjit__test__x86_64_v1_ps_add_acc_disasm.snap
---
source: crates/ppcjit/src/test.rs
expression: disasm
---
  pushq %rbp
  unwind PushFrameRegs { offset_upward_to_caller_sp: 16 }
  movq %rsp, %rbp
  unwind DefineNewFrame { offset_upward_to_caller_sp: 16, offset_downward_to_clobbers: 32 }
  subq $0x30, %rsp
  movq %rbx, 0x10(%rsp)
  unwind SaveReg { clobber_offset: 0, reg: p3i }
  movq %r12, 0x18(%rsp)
  unwind SaveReg { clobber_offset: 8, reg: p12i }
  movq %r13, 0x20(%rsp)
  unwind SaveReg { clobber_offset: 16, reg: p13i }
block0:
  movq %rdx, %rbx
  movq %rsi, %r12
  movq %rdi, %r13
  movl 0x2a8(%rsi), %eax
  shrl $0xd, %eax
  testb $0x1, %al
  jnz     label4; j label1
block3:
  movq %rbx, %rdx
  movq %r12, %rsi
  movq %r13, %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block4:
  movq %r12, %rsi
  movupd 0x88(%rsi), %xmm4
  movupd 0x98(%rsi), %xmm0
  movl 0x28c(%rsi), %eax
  movl (%rsi), %ecx
  movupd 0xa8(%rsi), %xmm1
  movupd 0xb8(%rsi), %xmm5
  movupd 0xc8(%rsi), %xmm6
  leal 0x10(%rcx), %ecx
  movl %ecx, (%rsi)
  addpd %xmm0, %xmm4
  movdqa %xmm4, %xmm3
  addpd %xmm1, %xmm3
  movdqa %xmm3, %xmm2
  addpd %xmm5, %xmm2
  movdqa %xmm2, %xmm0
  addpd %xmm6, %xmm0
  movupd %xmm0, 0x88(%rsi)
  andl $0xfffe0fff, %eax
  uninit  %xmm1
  xorpd %xmm1, %xmm1
  ucomisd %xmm4, %xmm1
  seta %cl
  movzbl %cl, %ecx
  shll $0xf, %ecx
  ucomisd (%rip), %xmm4
  seta %dl
  movzbl %dl, %edx
  shll $0xe, %edx
  orl %edx, %ecx
  ucomisd (%rip), %xmm4
  setnp %dl
  sete %dil
  andl %edi, %edx
  movzbl %dl, %edx
  shll $0xd, %edx
  orl %edx, %ecx
  ucomisd (%rip), %xmm4
  setp %dl
  movzbl %dl, %edx
  shll $0xc, %edx
  orl %edx, %ecx
  orl %ecx, %eax
  andl $0xfffe0fff, %eax
  ucomisd %xmm3, %xmm1
  seta %cl
  movzbl %cl, %ecx
  shll $0xf, %ecx
  ucomisd (%rip), %xmm3
  seta %dl
  movzbl %dl, %edx
  shll $0xe, %edx
  orl %edx, %ecx
  ucomisd (%rip), %xmm3
  setnp %dl
  sete %dil
  andl %edi, %edx
  movzbl %dl, %edx
  shll $0xd, %edx
  orl %edx, %ecx
  ucomisd (%rip), %xmm3
  setp %dl
  movzbl %dl, %edx
  shll $0xc, %edx
  orl %edx, %ecx
  orl %ecx, %eax
  andl $0xfffe0fff, %eax
  ucomisd %xmm2, %xmm1
  seta %dl
  movzbl %dl, %ecx
  shll $0xf, %ecx
  ucomisd (%rip), %xmm2
  seta %dil
  movzbl %dil, %edx
  shll $0xe, %edx
  orl %edx, %ecx
  ucomisd (%rip), %xmm2
  setnp %dil
  sete %r8b
  andl %r8d, %edi
  movzbl %dil, %edi
  shll $0xd, %edi
  orl %edi, %ecx
  ucomisd (%rip), %xmm2
  setp %dil
  movzbl %dil, %edi
  shll $0xc, %edi
  orl %edi, %ecx
  orl %ecx, %eax
  andl $0xfffe0fff, %eax
  ucomisd %xmm0, %xmm1
  seta %dil
  movzbl %dil, %ecx
  shll $0xf, %ecx
  ucomisd (%rip), %xmm0
  seta %dil
  movzbl %dil, %edi
  shll $0xe, %edi
  orl %edi, %ecx
  ucomisd (%rip), %xmm0
  setnp %r8b
  sete %r9b
  andl %r9d, %r8d
  movzbl %r8b, %edi
  shll $0xd, %edi
  orl %edi, %ecx
  ucomisd (%rip), %xmm0
  setp %r9b
  movzbl %r9b, %r8d
  shll $0xc, %r8d
  orl %r8d, %ecx
  orl %ecx, %eax
  movl %eax, 0x28c(%rsi)
  load_ext_name userextname27+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x80004, %ecx
  load_ext_name userextname1+0, %r10
  movq %r13, %rdi
  call    *%r10
  testq %rax, %rax
  movq %rax, %r10
  jnz     label6; j label5
block6:
  movq %rbx, %rdx
  movq %r12, %rsi
  movq %r13, %rdi
  return_call_unknown %r10 (0) tmp=%r11 %rdi=%rdi %rsi=%rsi %rdx=%rdx
block1:
  movl $0x800, %esi
  load_ext_name userextname0+0, %rax
  movq %r12, %rdi
  call    *%rax
  load_ext_name userextname26+0, %rsi
  uninit  %rdx
  xorq %rdx, %rdx
  movl $0x20001, %ecx
  load_ext_name userextname1+0, %rax
  movq %r13, %rdi
  call    *%rax
  testq %rax, %rax
  movq %rax, %r10
  jnz     label3; j label2
block2:
  movq 0x10(%rsp), %rbx
  movq 0x18(%rsp), %r12
  movq 0x20(%rsp), %r13
  addq $0x30, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
block5:
  movq 0x10(%rsp), %rbx
  movq 0x18(%rsp), %r12
  movq 0x20(%rsp), %r13
  addq $0x30, %rsp
  movq %rbp, %rsp
  popq %rbp
  retq
