crates/ppcjit/src/snapshots/ppcjit__test__x86_64_v3_fcmpu_clir.snap
---
source: crates/ppcjit/src/test.rs
expression: clir
---
function u0:0(i64, i64, i64) tail {
    ss0 = explicit_slot 8, align = 8
    gv0 = symbol userextname26
    gv1 = symbol userextname27
    sig0 = (i64, i64, i64) tail
    sig1 = (i64, i64, i64, i32) -> i64 system_v
    sig2 = (i64, i32, i64) -> i8 system_v
    sig3 = (i64, i32, i64) -> i8 system_v
    sig4 = (i64, i32, i64) -> i8 system_v
    sig5 = (i64, i32, i64) -> i8 system_v
    sig6 = (i64, i32, i8) -> i8 system_v
    sig7 = (i64, i32, i16) -> i8 system_v
    sig8 = (i64, i32, i32) -> i8 system_v
    sig9 = (i64, i32, i64) -> i8 system_v
    sig10 = (i64, i32, i32, i64) -> i8 system_v
    sig11 = (i64, i32, i32, f64) -> i8 system_v
    sig12 = (i64, i32) system_v
    sig13 = (i64) system_v
    sig14 = (i64, i16) system_v
    fn0 = u1:0 sig14
    fn1 = u0:2 sig1
    fn2 = u0:3 sig2
    fn3 = u0:4 sig3
    fn4 = u0:5 sig4
    fn5 = u0:6 sig5
    fn6 = u0:7 sig6
    fn7 = u0:8 sig7
    fn8 = u0:9 sig8
    fn9 = u0:10 sig9
    fn10 = u0:11 sig10
    fn11 = u0:12 sig11
    fn12 = u0:13 sig12
    fn13 = u0:14 sig13
    fn14 = u0:15 sig13
    fn15 = u0:16 sig13
    fn16 = u0:17 sig13
    fn17 = u0:18 sig13
    fn18 = u0:19 sig13
    fn19 = u0:20 sig13
    fn20 = u0:21 sig13
    fn21 = u0:22 sig13
    fn22 = u0:23 sig13
    fn23 = u0:24 sig13
    fn24 = u0:25 sig12
    fn25 = u0:26 sig13

                                block0(v0: i64, v1: i64, v2: i64):
@0000                               v3 = load.i32 notrap aligned v1+680
@0000                               v4 = iconst.i32 13
@0000                               v5 = ushr v3, v4  ; v4 = 13
@0000                               v6 = band_imm v5, 1
@0000                               v7 = ireduce.i8 v6
@0000                               brif v7, block2, block1

                                block1 cold:
@0000                               v8 = iconst.i16 2048
@0000                               call fn0(v1, v8)  ; v8 = 2048
@0000                               v9 = global_value.i64 gv0
@0000                               v10 = iconst.i64 0
@0000                               v11 = iconst.i32 0x0002_0001
@0000                               v12 = call fn1(v0, v9, v10, v11)  ; v10 = 0, v11 = 0x0002_0001
@0000                               v13 = icmp_imm ne v12, 0
@0000                               brif v13, block3, block4

                                block3:
@0001                               return_call_indirect.i64 sig0, v12(v0, v1, v2)

                                block4 cold:
@0001                               return

                                block2:
@0000                               v14 = load.f64x2 notrap aligned v1+152
@0000                               v15 = load.f64x2 notrap aligned v1+168
@0000                               v16 = extractlane v14, 0
@0000                               v17 = extractlane v15, 0
@0000                               v18 = fcmp lt v16, v17
@0000                               v19 = fcmp gt v16, v17
@0000                               v20 = fcmp eq v16, v17
@0000                               v21 = fcmp uno v16, v17
@0000                               v22 = load.i32 notrap aligned v1+652
@0000                               v23 = uextend.i32 v18
@0000                               v24 = uextend.i32 v19
@0000                               v25 = uextend.i32 v20
@0000                               v26 = uextend.i32 v21
@0000                               v27 = ishl_imm v23, 15
@0000                               v28 = ishl_imm v24, 14
@0000                               v29 = ishl_imm v25, 13
@0000                               v30 = ishl_imm v26, 12
@0000                               v31 = bor v27, v28
@0000                               v32 = bor v31, v29
@0000                               v33 = bor v32, v30
@0000                               v34 = iconst.i32 0x0001_f000
@0000                               v35 = band_not v22, v34  ; v34 = 0x0001_f000
@0000                               v36 = bor v35, v33
@0000                               v37 = load.i32 notrap aligned v1+648
@0000                               v38 = uextend.i32 v18
@0000                               v39 = uextend.i32 v19
@0000                               v40 = uextend.i32 v20
@0000                               v41 = uextend.i32 v21
@0000                               v42 = ishl_imm v38, 31
@0000                               v43 = ishl_imm v39, 30
@0000                               v44 = ishl_imm v40, 29
@0000                               v45 = ishl_imm v41, 28
@0000                               v46 = bor v42, v43
@0000                               v47 = bor v46, v44
@0000                               v48 = bor v47, v45
@0000                               v49 = iconst.i32 -268435456
@0000                               v50 = band_not v37, v49  ; v49 = -268435456
@0000                               v51 = bor v50, v48
@0000                               v52 = load.i32 notrap aligned v1
@0000                               v53 = iadd_imm v52, 4
                                    store notrap aligned v51, v1+648
                                    store notrap aligned v53, v1
                                    store notrap aligned v36, v1+652
                                    v54 = global_value.i64 gv1
                                    v55 = iconst.i64 0
                                    v56 = iconst.i32 0x0002_0001
                                    v57 = call fn1(v0, v54, v55, v56)  ; v55 = 0, v56 = 0x0002_0001
                                    v58 = icmp_imm ne v57, 0
                                    brif v58, block5, block6

                                block5:
@0001                               return_call_indirect.i64 sig0, v57(v0, v1, v2)

                                block6 cold:
@0001                               return
}
